# Aether

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  TESTING.md  TESTING_WINDOWS.md  WINDOWS_QUICKSTART.md  analyze_pgn.sh  analyze_results.ps1  analyze_results.sh  full_test.ps1  full_test.sh  lichess_simulation.ps1  lichess_simulation.sh  openings.epd  quick_test.bat  quick_test.ps1  quick_test.sh  run_tournament.bat  run_tournament.ps1  run_tournament.sh  single_game.ps1  single_game.sh
.github/workflows/: ci.yml  rust.yml
benches/: Cargo.toml  move_generation.rs
benches/benches/: engine_bench.rs
board/: Cargo.toml
board/src/: builder.rs  cache.rs  check.rs  error.rs  fen.rs  game_state.rs  lib.rs  movement.rs  ops.rs  pst.rs  query.rs  state_info.rs  zobrist.rs
board/src/polyglot/: mod.rs  polyglot_keys.rs
board/tests/: edge_cases.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml  build.rs
core/src/: bitboard.rs  castling.rs  chess_move.rs  color.rs  error.rs  file.rs  lib.rs  move.rs  piece.rs  rank.rs  score.rs  square.rs  zobrist_keys.rs
core/src/attacks/: codegen.rs  magic.rs  magic_constants.rs  mod.rs  pieces.rs
core/tests/: bitboard_tests.rs  chess_move_tests.rs  file_tests.rs  rank_tests.rs  square_tests.rs
docs/: BENCHMARK_TESTING.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/eval/: mod.rs  simple_evaluator.rs
engine/src/search/: alpha_beta.rs  mod.rs  move_ordering.rs  mtdf.rs  searcher.rs  see.rs  tt.rs
engine/src/search/alpha_beta/: common.rs  full.rs  mod.rs  pure.rs
engine/src/search/mcts/: classic.rs  mod.rs  node.rs  searcher.rs
engine/src/search/negascout/: mod.rs  pure.rs
eval/: Cargo.toml
eval/src/: king_safety.rs  lib.rs  mobility.rs  pawn_structure.rs  piece_square_tables.rs  simple_evaluator.rs
interface/: Cargo.toml
interface/src/: benchmark.rs  epd.rs  handler.rs  lib.rs  uci.rs
movegen/: Cargo.toml
movegen/src/: attacks.rs  generator.rs  lib.rs  magic.rs  magic_constants.rs  magic_gen.rs
movegen/src/pieces/: king.rs  knight.rs  mod.rs  pawn.rs  utils.rs
movegen/tests/: magic_tests.rs  non_sliding_tests.rs  perft_tests.rs
opening/: Cargo.toml
opening/src/: lib.rs
perft/: Cargo.toml
perft/benches/: perft.rs
perft/src/: lib.rs
perft/tests/: kiwipete.rs  position3.rs  start.rs
positions/: README.md
positions/opening/: 2moves_v1.epd
results/2000ms/: 2moves_v1_20260127_203947.csv  Drawkiller_balanced_big_20260127_203947.csv  UHO_4060_v4_20260127_203947.csv  comparison_20260127_203947.csv  endgames_20260127_203947.csv  noob_3moves_20260127_203947.csv
results/5000ms/: 2moves_v1_20260128_085314.csv  Drawkiller_balanced_big_20260128_085314.csv  UHO_4060_v4_20260128_085314.csv  comparison_20260128_085314.csv  endgames_20260128_085314.csv  noob_3moves_20260128_085314.csv
results/500ms/: 2moves_v1_20260127_201735.csv  Drawkiller_balanced_big_20260127_201735.csv  UHO_4060_v4_20260127_201735.csv  comparison_20260127_201735.csv  endgames_20260127_201735.csv  noob_3moves_20260127_201735.csv
results/charts/: benchmark_summary.txt
scripts/: download_positions.bat  download_positions.sh  profile.sh  requirements.txt  run_benchfile.bat  run_benchfile.sh  run_benchmarks.bat  run_comparison.bat  run_comparison.sh  run_elo_test.bat  run_phase_tests.bat  run_phase_tests.sh  run_tournament.bat  run_tournament.sh  visualize_elo_test.py  visualize_results.py
search/: Cargo.toml
search/src/: alpha_beta.rs  lib.rs  move_ordering.rs  search_info.rs  transposition_table.rs
src/: bitboard.rs  board.rs  constans.rs  constants.rs  lib.rs  main.rs  perft_divide.rs
src/board/: attacks_generation.rs  mod.rs  move_generation.rs  util.rs  utils.rs  zobrist.rs
tests/: bitboard_tests.rs  board_tests.rs  integration_test.rs  integration_tests.rs  perft_divide.rs  perft_test.rs
types/: Cargo.toml  build.rs
types/src/: bitboard.rs  board.rs  board_query.rs  castling.rs  chess_move.rs  color.rs  error.rs  evaluator.rs  file.rs  lib.rs  move_generator.rs  piece.rs  rank.rs  searcher.rs  square.rs  zobrist_keys.rs
types/src/attacks/: codegen.rs  magic_constants.rs  mod.rs
types/tests/: bitboard_tests.rs  chess_move_tests.rs  file_tests.rs  rank_tests.rs  square_tests.rs
uci/: Cargo.toml
uci/src/: commands.rs  engine_handler.rs  lib.rs  main.rs  protocol.rs
uci/tests/: uci_tests.rs
