[package]
name = "aether"
version = "0.1.0"
authors = ["Kacper Maciołek"]
repository = "https://github.com/Kacperacy/Aether"
edition = "2024"

[dependencies]
aether-core = { workspace = true }
board = { workspace = true }
movegen = { workspace = true }
interface = { workspace = true }

[workspace]
members = [
    "core",
    "board",
    "movegen",
    "engine",
    "interface",
]

[workspace.dependencies]
# External dependencies
rand = "0.10.0-rc.5"
rand_chacha = "0.10.0-rc.1"
thiserror = "2.0.17"

# Workspace members as dependencies
aether-core = { path = "./core" }
board = { path = "./board" }
movegen = { path = "./movegen" }
engine = { path = "./engine" }
interface = { path = "./interface" }

[dev-dependencies]

[features]
default = []
bench = []

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-native]
inherits = "release"
# Use with: RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native

[profile.bench]
inherits = "release"
debug = true
