[package]
name = "benches"
version = "0.1.0"
edition = "2024"

[dependencies]
aether-types = { workspace = true }
board = { workspace = true }
movegen = { workspace = true }
eval = { workspace = true }
search = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false