[package]
name = "aether-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
codegen = []

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "gen_magics"
required-features = ["codegen"]
path = "src/bin/gen_magics.rs"
